--- a/index9.html
+++ b/index9.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230721122743"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230721122743"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230721122743"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230721122743"></script>
-  <script src="files/script /tilt.js?_v=20230721122743"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230721191716"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230721191716"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230721191716"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230721191716"></script>
+  <script src="files/script /tilt.js?_v=20230721191716"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230721122743" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230721122743" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230721191716" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230721191716" rel="stylesheet"
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="files/favicon/apple-icon-60x60.png">
@@ -59,27 +59,27 @@
 	<svg width="40%" height="40%" viewBox="0 0 4521 4468" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<path
 			d="M607.76 2340C607.76 2308.8 633.056 2283.5 664.26 2283.5C695.464 2283.5 720.76 2308.8 720.76 2340L607.76 2340ZM664.26 2537.44L607.76 2537.44L664.26 2537.44ZM1834.26 3707.44L1834.26 3763.94L1834.26 3763.94L1834.26 3707.44ZM2228.67 3707.44L1663.67 4033.65L1663.67 3381.24L2228.67 3707.44ZM720.76 2340L720.76 2537.44L607.76 2537.44L607.76 2340L720.76 2340ZM720.76 2537.44C720.76 3152.41 1219.29 3650.94 1834.26 3650.94L1834.26 3763.94C1156.88 3763.94 607.76 3214.82 607.76 2537.44L720.76 2537.44Z"
-			fill="black" />
+			fill="white" />
 		<path
 			d="M3912.59 2127.39C3912.59 2158.59 3887.29 2183.89 3856.09 2183.89C3824.88 2183.89 3799.59 2158.59 3799.59 2127.39L3912.59 2127.39ZM3856.09 1929.94L3912.59 1929.94L3856.09 1929.94ZM2686.09 759.94L2686.09 703.44L2686.09 703.44L2686.09 759.94ZM2291.68 759.94L2856.68 433.737L2856.68 1086.14L2291.68 759.94ZM3799.59 2127.39L3799.59 1929.94L3912.59 1929.94L3912.59 2127.39L3799.59 2127.39ZM3799.59 1929.94C3799.59 1314.97 3301.06 816.44 2686.09 816.44L2686.09 703.44C3363.47 703.44 3912.59 1252.56 3912.59 1929.94L3799.59 1929.94Z"
-			fill="black" />
+			fill="white" />
 		<path fill-rule="evenodd" clip-rule="evenodd"
 			d="M850.447 1545.48C767.184 1628.75 767.184 1763.74 850.447 1847.01L2647.07 3643.63C2730.34 3726.89 2865.33 3726.89 2948.6 3643.63L3669.63 2922.6C3752.89 2839.33 3752.89 2704.34 3669.63 2621.07L1873.01 824.448C1789.74 741.185 1654.75 741.184 1571.48 824.448L850.447 1545.48ZM917.784 1577.07C851.963 1642.89 851.963 1749.6 917.783 1815.42L2678.06 3575.7C2743.88 3641.52 2850.6 3641.52 2916.42 3575.7L3601.1 2891.01C3666.92 2825.19 3666.92 2718.48 3601.1 2652.66L1840.83 892.38C1775.01 826.559 1668.29 826.559 1602.47 892.38L917.784 1577.07Z"
-			fill="black" stroke="black" stroke-width="41" />
+			fill="white" stroke="black" stroke-width="41" />
 		<path
 			d="M1443.52 1225.06L1279.06 1389.52C1260.63 1407.95 1260.63 1437.83 1279.06 1456.26C1297.49 1474.69 1327.37 1474.69 1345.8 1456.26L1510.26 1291.8C1528.69 1273.37 1528.69 1243.49 1510.26 1225.06C1491.83 1206.63 1461.95 1206.63 1443.52 1225.06Z"
-			fill="black" stroke="black" stroke-width="11" />
+			fill="white" stroke="black" stroke-width="11" />
 	</svg>
 	
 	
 		</div>
-		<h5>Please rotate your device.</h5>
+		<h5 style="font-weight: 300;">Please rotate your device.</h5>
 	</div>
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230721122743" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230721122743"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230721191716" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230721191716"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   
@@ -423,8 +423,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230721122743"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230721122743"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230721191716"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230721191716"></script> -->
 
 
 
@@ -435,15 +435,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230721122743"></script>
-<script src="files/script /locomotive.js?_v=20230721122743"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230721122743"></script>
+<script src="files/script /swup.js?_v=20230721191716"></script>
+<script src="files/script /locomotive.js?_v=20230721191716"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230721191716"></script>
 
-<script src="files/script /script.js?_v=20230721122743"></script>
+<script src="files/script /script.js?_v=20230721191716"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230721122743"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230721191716"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
