--- a/index8.html
+++ b/index8.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230721191716"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230721191716"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230721191716"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230721191716"></script>
-  <script src="files/script /tilt.js?_v=20230721191716"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230723083031"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230723083031"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230723083031"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230723083031"></script>
+  <script src="files/script /tilt.js?_v=20230723083031"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230721191716" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230721191716" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230723083031" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230723083031" rel="stylesheet"
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="files/favicon/apple-icon-60x60.png">
@@ -33,12 +33,12 @@
 </head>
 <header>
 	<nav class="Main_navbar">
-		<li><a data-swup-preload href="index.html">Work</a></li>
+		<li><a id="bt_work" data-swup-preload href="index.html">Work</a></li>
 		<li><a href="index2.html">About</a></li>
 		<div class="select_nav"></div>
 	</nav>
 	<div class="notify ny_1">
-		<h2>smooth scrolling is off</h2>
+		<h2>smooth scrolling is off</h2> 
 	</div>
 	<div class="notify ny_2">
 		<h2>fullscreen and restart</h2>
@@ -78,8 +78,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230721191716" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230721191716"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230723083031" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230723083031"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -298,8 +298,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230721191716"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230721191716"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230723083031"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230723083031"></script> -->
 
 
 
@@ -310,15 +310,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230721191716"></script>
-<script src="files/script /locomotive.js?_v=20230721191716"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230721191716"></script>
+<script src="files/script /swup.js?_v=20230723083031"></script>
+<script src="files/script /locomotive.js?_v=20230723083031"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230723083031"></script>
 
-<script src="files/script /script.js?_v=20230721191716"></script>
+<script src="files/script /script.js?_v=20230723083031"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230721191716"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230723083031"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
