--- a/index4.html
+++ b/index4.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230723093509"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230723093509"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230723093509"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230723093509"></script>
-  <script src="files/script /tilt.js?_v=20230723093509"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230723132534"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230723132534"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230723132534"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230723132534"></script>
+  <script src="files/script /tilt.js?_v=20230723132534"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230723093509" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230723093509" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230723132534" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230723132534" rel="stylesheet"
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="files/favicon/apple-icon-60x60.png">
@@ -78,8 +78,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230723093509" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230723093509"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230723132534" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230723132534"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -140,9 +140,7 @@
             <picture><source srcset="img/Back_Aston.webp" type="image/webp"><img class="img_back_main" id="img_back_main_AS" src="img/Back_Aston.jpg" alt=""></picture>
           </div>
         </div>
-        <div class="pg-1_bk_1">
-          <div class="container">
-          </div>
+        <div class="pg-1_bk_1 mob_pic">
           <picture><source srcset="img/Aston_main.webp" type="image/webp"><img id="img_back_AS_2" width="100%" src="img/Aston_main.jpg" alt=""></picture>
         </div>
         <div class="pg-1_bk_0">
@@ -159,7 +157,7 @@
 
           </div>
         </div>
-        <div class="pg-1_bk_1">
+        <div class="pg-1_bk_1 mob_pic">
           <div class="container">
           </div>
           <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img id="img_back_AS_3" width="100%" src="img/aston_post_5.jpg" alt=""></picture>
@@ -186,7 +184,7 @@
               </div>
         </div>
       </div>
-        <div class="pg-1_bk_1">
+        <div class="pg-1_bk_1 mob_pic">
           <div class="container">
           </div>
           <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img id="img_back_AS_5" width="100%" src="img/aston_post_6.jpg" alt=""></picture>
@@ -307,8 +305,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230723093509"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230723093509"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230723132534"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230723132534"></script> -->
 
 
 
@@ -319,15 +317,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230723093509"></script>
-<script src="files/script /locomotive.js?_v=20230723093509"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230723093509"></script>
+<script src="files/script /swup.js?_v=20230723132534"></script>
+<script src="files/script /locomotive.js?_v=20230723132534"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230723132534"></script>
 
-<script src="files/script /script.js?_v=20230723093509"></script>
+<script src="files/script /script.js?_v=20230723132534"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230723093509"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230723132534"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
