--- a/index11.html
+++ b/index11.html
@@ -4,17 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230723132534"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230723132534"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230723132534"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230723132534"></script>
-  <script src="files/script /tilt.js?_v=20230723132534"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230724235433"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230724235433"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230724235433"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230724235433"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230723132534" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230723132534" rel="stylesheet"
-  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230724235433" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230724235433" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230724235433">
+
+  <link rel="stylesheet" href="css/style.min.css?_v=20230724235433"></link>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230724235433" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    
+  
+  <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="files/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="files/favicon/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="files/favicon/apple-icon-76x76.png">
@@ -78,8 +85,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230723132534" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230723132534"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230724235433" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230724235433"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -132,6 +139,7 @@
           <picture><source srcset="img/ekfood_main_3.webp" type="image/webp"><img id="img_back_EK_2" width="100%" src="img/ekfood_main_3.jpg" alt=""></picture>
         </div>
         <div class="pg-1_bk_0">
+          <div class="container">
           <div class="row justify-content-end align-items-center d-flex">
             <h2>About</h2>
             <div class="col-4 mob_off"></div>
@@ -151,6 +159,7 @@
             </div>
             <div class="col-4 mob_off"></div>
 
+          </div>
           </div>
         </div>
         <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_ekfood">
@@ -309,8 +318,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230723132534"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230723132534"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230724235433"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230724235433"></script> -->
 
 
 
@@ -321,15 +330,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230723132534"></script>
-<script src="files/script /locomotive.js?_v=20230723132534"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230723132534"></script>
-
-<script src="files/script /script.js?_v=20230723132534"></script>
+<script src="files/script /swup.js?_v=20230724235433"></script>
+<script src="files/script /locomotive.js?_v=20230724235433"></script>
+<script src="https://unpkg.com/fast-image-zoom@7.0.1/dist/fast-image-zoom.js?_v=20230724235433"></script>
+<script src="files/script /tilt.js?_v=20230724235433"></script>
+<script src="files/script /script.js?_v=20230724235433"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230723132534"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230724235433"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
