--- a/index4.html
+++ b/index4.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230724235433"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230724235433"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230724235433"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230724235433"
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230725033748"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230725033748"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230725033748"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230725033748"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230724235433" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230725033748" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230724235433" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230724235433">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230725033748" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230725033748">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230724235433"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230725033748"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230724235433" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230725033748" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -85,8 +85,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230724235433" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230724235433"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230725033748" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230725033748"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -165,29 +165,18 @@
             <div class="carousel-item active">
               <div class="container">
                 <div class="row justify-content-center">
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
-                  </div>
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_6.jpg" alt="ASTON"></picture>
-                  </div>
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="container">
-                <div class="row justify-content-center">
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_6.jpg" alt="ASTON"></picture>
-                  </div>
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
-                  </div>
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_6.jpg" alt="ASTON"></picture>
+                  <div class="col-11">
+                    <div style="padding-bottom: 0px;" class="row">
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                      </div>
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_6.jpg" alt="ASTON"></picture>
+                      </div>
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -195,14 +184,37 @@
             <div class="carousel-item">
               <div class="container">
                 <div class="row justify-content-center">
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                  <div class="col-11">
+                    <div style="padding-bottom: 0px;" class="row">
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                      </div>
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_6.jpg" alt="ASTON"></picture>
+                      </div>
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                      </div>
+                    </div>
                   </div>
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_6.jpg" alt="ASTON"></picture>
-                  </div>
-                  <div class="col-3">
-                    <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-11">
+                    <div style="padding-bottom: 0px;" class="row">
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                      </div>
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_6.jpg" alt="ASTON"></picture>
+                      </div>
+                      <div class="col-4">
+                        <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -242,8 +254,12 @@
         </div>
         <div class="pg-1_bk_1 mob_pic">
           <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-10">
+                <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img id="img_back_AS_3" width="100%" src="img/aston_post_5.jpg" alt=""></picture>
+              </div>
+            </div>
           </div>
-          <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img id="img_back_AS_3" width="100%" src="img/aston_post_5.jpg" alt=""></picture>
         </div>
         <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_aston">
 
@@ -269,8 +285,12 @@
       </div>
         <div class="pg-1_bk_1 mob_pic">
           <div class="container">
+            <div class="row">
+              <div class="col-12">
+                <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img id="img_back_AS_5" width="100%" src="img/aston_post_6.jpg" alt=""></picture>
+              </div>
+            </div>
           </div>
-          <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img id="img_back_AS_5" width="100%" src="img/aston_post_6.jpg" alt=""></picture>
         </div>
       <div class="pg-1_bk_3">
         <div class="container">
@@ -390,8 +410,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230724235433"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230724235433"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230725033748"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230725033748"></script> -->
 
 
 
@@ -399,15 +419,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230724235433"></script>
-<script src="files/script /locomotive.js?_v=20230724235433"></script>
-<script src="https://unpkg.com/fast-image-zoom@7.0.1/dist/fast-image-zoom.js?_v=20230724235433"></script>
-<script src="files/script /tilt.js?_v=20230724235433"></script>
-<script src="files/script /script.js?_v=20230724235433"></script>
+<script src="files/script /swup.js?_v=20230725033748"></script>
+<script src="files/script /locomotive.js?_v=20230725033748"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230725033748"></script>
+
+<script src="files/script /tilt.js?_v=20230725033748"></script>
+<script src="files/script /script.js?_v=20230725033748"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230724235433"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230725033748"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
