--- a/index4.html
+++ b/index4.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230725194109"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230725194109"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230725194109"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230725194109"
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230725212808"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230725212808"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230725212808"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230725212808"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230725194109" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230725212808" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230725194109" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230725194109">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230725212808" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230725212808">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230725194109"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230725212808"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230725194109" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230725212808" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -85,8 +85,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230725194109" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230725194109"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230725212808" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230725212808"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -245,8 +245,11 @@
               <div class="carousel-item active carousel-items">
                 <div class="container">
                   <div class="row justify-content-center">
-                    <div class="col-11">
-                      <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                    <div class="col-5" >
+                      <picture><source srcset="img/aston_mobile.webp" type="image/webp"><img width="100%" class="carousel_img"  src="img/aston_mobile.jpg" alt="ASTON"></picture>
+                    </div>
+                    <div class="col-5">
+                      <picture><source srcset="img/aston_mobile_2.webp" type="image/webp"><img width="100%" class="carousel_img" src="img/aston_mobile_2.jpg" alt="ASTON"></picture>
                     </div>
                   </div>
                 </div>
@@ -254,8 +257,11 @@
               <div class="carousel-item carousel-items">
                 <div class="container">
                   <div class="row justify-content-center">
-                    <div class="col-11">
-                      <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_6.jpg" alt="ASTON"></picture>
+                    <div class="col-5">
+                      <picture><source srcset="img/aston_mobile_2.webp" type="image/webp"><img width="100%" class="carousel_img" src="img/aston_mobile_2.jpg" alt="ASTON"></picture>
+                    </div>
+                    <div class="col-5">
+                      <picture><source srcset="img/aston_mobile.webp" type="image/webp"><img width="100%" class="carousel_img" src="img/aston_mobile.jpg" alt="ASTON"></picture>
                     </div>
                   </div>
                 </div>
@@ -263,8 +269,11 @@
               <div class="carousel-item carousel-items">
                 <div class="container">
                   <div class="row justify-content-center">
-                    <div class="col-11">
-                      <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/aston_post_5.jpg" alt="ASTON"></picture>
+                    <div class="col-5">
+                      <picture><source srcset="img/aston_mobile.webp" type="image/webp"><img width="100%" class="carousel_img" src="img/aston_mobile.jpg" alt="ASTON"></picture>
+                    </div>
+                    <div class="col-5">
+                      <picture><source srcset="img/aston_mobile_2.webp" type="image/webp"><img width="100%" class="carousel_img" src="img/aston_mobile_2.jpg" alt="ASTON"></picture>
                     </div>
                   </div>
                 </div>
@@ -298,7 +307,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-10">
-                <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img id="img_back_AS_3" width="100%" src="img/aston_post_5.jpg" alt=""></picture>
+                <picture><source srcset="img/aston_post_5.webp" type="image/webp"><img id="img_back_AS_3 zoom-image" width="100%" src="img/aston_post_5.jpg" alt=""></picture>
               </div>
             </div>
           </div>
@@ -452,8 +461,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230725194109"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230725194109"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230725212808"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230725212808"></script> -->
 
 
 
@@ -461,16 +470,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230725194109"></script>
-<script src="files/script /locomotive.js?_v=20230725194109"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230725194109"></script>
-
-<script src="files/script /tilt.js?_v=20230725194109"></script>
-<script src="files/script /script.js?_v=20230725194109"></script>
+<script src="files/script /swup.js?_v=20230725212808"></script>
+<script src="files/script /locomotive.js?_v=20230725212808"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230725212808"></script>
+<script src="files/script /tilt.js?_v=20230725212808"></script>
+<script src="files/script /script.js?_v=20230725212808"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230725194109"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230725212808"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
