--- a/index4.html
+++ b/index4.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230806181144"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230806181144"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230806181144"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230806181144"
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230807150750"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230807150750"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230807150750"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230807150750"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230806181144" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230807150750" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230806181144">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230807150750">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230806181144"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230807150750"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230806181144" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230807150750" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -86,8 +86,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230806181144" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230806181144"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230807150750" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230807150750"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -340,8 +340,9 @@
           <div class="row">
               <div class="col-6 mob_off_obj"></div>
               <div class="col-6 img_as">
-                <p>"When I go to the Aston Martin website, I always expect to experience luxury and upmarket, but something is always
-                missing..."</p>
+                <p>In order to gather data for further analysis, it was essential to understand the primary concerns people have when
+                building application files. Therefore, a series of surveys and user polls were conducted during the booking process. The
+                goal was to identify the key pain points and challenges faced by users while creating application files."</p>
             </div>
             </div>
 
@@ -350,7 +351,8 @@
                 <div class="avatar avatarCenter_mob">
                   <picture><source srcset="img/memoji_1.webp" type="image/webp"><img src="img/memoji_1.png" alt=""></picture>
                 </div>
-                <p>"I opened their website and it seems like the pages take forever to load! I can't wait to view the models."</p>
+                <p>"When I go to the Aston Martin website, I always expect to experience luxury and upmarket, but something is always
+                missing..."</p>
               </div>
               <div class="col-1 mob_off_obj"></div>
               <div class="col-6 mob_on_obj">
@@ -362,7 +364,7 @@
 
               <div class="col-5 mob_off_obj"></div>
               <div class="col-5 mob_on_obj">
-                <div class="avatar avatarLeft avatarCenter_mob">
+                <div class="avatar avatarLeft avatarCenter_mob2">
                   <picture><source srcset="img/memoji_3.webp" type="image/webp"><img src="img/memoji_3.png" alt=""></picture>
                 </div>
                 <p>"I have visited their website several times, but I always get lost in the pile of information! I can't find what I'm
@@ -382,7 +384,7 @@
               <div class="justify-content-center d-flex w-100">
 
                 <div class="col-5 mob_on_obj">
-                  <div class="avatar avatarCenter avatarCenter_mob">
+                  <div class="avatar avatarCenter avatarCenter_mob2">
                     <picture><source srcset="img/memoji_5.webp" type="image/webp"><img src="img/memoji_5.png" alt=""></picture>
                   </div>
                   <p>"Planning to buy an Aston Martin, but I'm not sure how to go about it. Where can I find information about dealers and
@@ -395,7 +397,7 @@
           </div>
           <div class="userflow container">
             <div class="row">
-              <div class="col-3"><h2>User Flow</h2></div>
+              <div class="col-3 mob_on_full"><h2>User Flow</h2></div>
               <div class="col-9"></div>
               <div class="col-12">
                 <picture><source srcset="img/aston_shems.webp" type="image/webp"><img width="100%" src="img/aston_shems.jpg" alt=""></picture>
@@ -637,23 +639,23 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230806181144"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230806181144"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230807150750"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230807150750"></script> -->
 
 
 
 
 
-<script src="files/script /swup.js?_v=20230806181144"></script>
-<script src="files/script /locomotive.js?_v=20230806181144"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230806181144"></script>
+<script src="files/script /swup.js?_v=20230807150750"></script>
+<script src="files/script /locomotive.js?_v=20230807150750"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230807150750"></script>
 
-<script src="files/script /tilt.js?_v=20230806181144"></script>
-<script type="module" src="files/script /script.js?_v=20230806181144"></script>
+<script src="files/script /tilt.js?_v=20230807150750"></script>
+<script type="module" src="files/script /script.js?_v=20230807150750"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230806181144"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230807150750"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
