--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230812161419"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230812161419"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230812161419"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230812161419"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230812161419"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230813162024"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230813162024"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230813162024"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230813162024"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230813162024"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230812161419"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230813162024"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230812161419" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230813162024" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230812161419">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230813162024">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230812161419"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230813162024"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230812161419" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230813162024" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -105,8 +105,10 @@
           <div class="row justify-content-center w-1">
             <div class="col-10 position-relative block_main_home">
               <a href="index3.html">
-                <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" class="mobile_pic anim-pic" src="img/red_friesa.jpg" alt=""></picture>
-                <div class="lds-dual-ring lds-dual-ring_home"></div>
+                <div class="mobile_pic  anim-pic">
+                  <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" src="img/red_friesa.jpg" alt=""></picture>
+                  <div class="lds-dual-ring"></div>
+                </div>
               </a>
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
@@ -132,8 +134,10 @@
           <div class="row justify-content-center w-2">
             <div class="col-10 position-relative block_main_home">
               <a href="index4.html">
-                <picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img id="img_main_2" class="mobile_pic anim-pic" src="img/aston_martin_main.jpg" alt=""></picture>
-                <div class="lds-dual-ring lds-dual-ring_home"></div>
+              <div class="mobile_pic  anim-pic">
+                <picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img id="img_main_2" src="img/aston_martin_main.jpg" alt=""></picture>
+                <div class="lds-dual-ring"></div>
+              </div>
               </a>
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
@@ -159,8 +163,10 @@
           <div class="row justify-content-center w-3">
             <div class="col-10 position-relative block_main_home">
               <a href="index5.html">
-                <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img id="img_main_3" class="mobile_pic anim-pic" src="img/Landing_Memoj.jpg" alt=""></picture>
-                <div class="lds-dual-ring lds-dual-ring_home"></div>
+                <div class="mobile_pic  anim-pic">
+                <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img id="img_main_3" src="img/Landing_Memoj.jpg" alt=""></picture>
+                <div class="lds-dual-ring"></div>
+                </div>
               </a>
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
@@ -186,7 +192,9 @@
           <div class="row justify-content-center w-4">
             <div class="col-10 position-relative block_main_home">
               <a href="index6.html">
-                <picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/Landing_org.jpg" alt=""></picture>
+                <div class="mobile_pic">
+                <picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" src="img/Landing_org.jpg" alt=""></picture>
+                </div>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -212,7 +220,9 @@
           <div class="row justify-content-center w-5">
             <div class="col-10 position-relative block_main_home">
               <a href="index7.html">
-                <picture><source srcset="img/model_post_5.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/model_post_5.jpg" alt=""></picture>
+                <div class="mobile_pic">
+                <picture><source srcset="img/model_post_5.webp" type="image/webp"><img id="img_main_5" src="img/model_post_5.jpg" alt=""></picture>
+                </div>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -238,7 +248,9 @@
           <div class="row justify-content-center w-6">
             <div class="col-10 position-relative block_main_home">
               <a href="index8.html">
-                <picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
+                <div class="mobile_pic">
+                <picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" src="img/senator_main.jpg" alt=""></picture>
+                </div>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -264,7 +276,9 @@
           <div class="row justify-content-center w-7">
             <div class="col-10 position-relative block_main_home">
               <a href="index9.html">
-                <picture><source srcset="img/Fs_home.webp" type="image/webp"><img id="img_main_7" class="mobile_pic" src="img/Fs_home.jpg" alt=""></picture>
+                <div class="mobile_pic">
+                <picture><source srcset="img/Fs_home.webp" type="image/webp"><img id="img_main_7" src="img/Fs_home.jpg" alt=""></picture>
+                </div>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -290,7 +304,9 @@
           <div class="row justify-content-center w-8">
             <div class="col-10 position-relative block_main_home">
               <a href="index10.html">
+                <div class="mobile_pic">
                 <picture><source srcset="img/rialust_main.webp" type="image/webp"><img id="img_main_8" class="mobile_pic" src="img/rialust_main.jpg" alt=""></picture>
+                </div>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -316,7 +332,9 @@
           <div class="row justify-content-center w-9">
             <div class="col-10 position-relative block_main_home">
               <a href="index11.html">
+                <div class="mobile_pic">
                 <picture><source srcset="img/ekfood_main.webp" type="image/webp"><img id="img_main_9" class="mobile_pic" src="img/ekfood_main.jpg" alt=""></picture>
+                </div>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -342,7 +360,9 @@
           <div class="row justify-content-center w-10">
             <div class="col-10 position-relative block_main_home">
               <a href="index12.html">
+                <div class="mobile_pic">
                 <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
+                </div>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -373,16 +393,14 @@
 </body>
 
 
-<script src="files/script /swup.js?_v=20230812161419"></script>
-<script src="files/script /locomotive.js?_v=20230812161419"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230812161419"></script>
-<!-- <script src="https://unpkg.com/fast-image-zoom@7.0.1/dist/fast-image-zoom.js?_v=20230812161419"></script> -->
-<script src="files/script /tilt.js?_v=20230812161419"></script>
-<script type="module" src="files/script /script.js?_v=20230812161419"></script>
+<script src="files/script /swup.js?_v=20230813162024"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230813162024"></script>
+<script src="files/script /tilt.js?_v=20230813162024"></script>
+<script type="module" src="files/script /script.js?_v=20230813162024"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230812161419"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230813162024"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
